test/error/ast/NotBoolInLogicExpr.mod
MODULE NotBoolInLogicExpr;
VAR a: INTEGER; b: BOOLEAN; c: BOOLEAN;
BEGIN
  c := b & a;
END NotBoolInLogicExpr.
